Fixed overflow behaviour (e.g. for small screens)

--- a/src/client/less/markdown.less
+++ b/src/client/less/markdown.less
@@ -2,6 +2,7 @@
   font-size: 16px;
   color: @colorText;
   line-height: 1.4;
+  overflow: hidden;
 
   p, h5, h6 {
     margin: 15px 0;
