--- a/src/client/less/view.less
+++ b/src/client/less/view.less
@@ -38,6 +38,10 @@ body {
   background-color: white;
   cursor: default;
 
+  a, span {
+    white-space: nowrap;
+  }
+
   .main-column {
     padding: 15px 0;
     border-bottom: 1px solid #ddd;
